--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,25 @@
-pywinauto>=0.6.8
-customtkinter>=5.0.0
-pystray>=0.19.5
-Pillow>=10.0.0
-schedule>=1.1.0
-psutil>=5.9.0
-pyautogui>=0.9.53
+altgraph==0.17.5
+comtypes==1.4.13
+customtkinter==5.2.2
+darkdetect==0.8.0
+MouseInfo==0.1.3
+packaging==25.0
+pefile==2023.2.7
+pillow==12.0.0
+psutil==7.1.3
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+pyinstaller==6.16.0
+pyinstaller-hooks-contrib==2025.10
+PyMsgBox==2.0.1
+pyperclip==1.11.0
+PyRect==0.2.0
+PyScreeze==1.0.1
+pystray==0.19.5
+pytweening==1.2.0
+pywin32==311
+pywin32-ctypes==0.2.3
+pywinauto==0.6.9
+schedule==1.2.2
+setuptools==80.9.0
+six==1.17.0
